feat: 添加获取项目详情接口
