# docs/swagger.json
@@ -10,7 +10,46 @@
         "version": "1.0"
     },
     "paths": {
-        "/config/list": {
+        "/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "鉴权"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "description": "登录用户的账号密码",
+                        "name": "Login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/services.Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/services.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/detail": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -19,7 +58,50 @@
                     "application/json"
                 ],
                 "tags": [
-                    "配置"
+                    "项目"
+                ],
+                "summary": "获取项目详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "项目id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "项目名称",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ProjectInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/services.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/list": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "项目"
                 ],
                 "summary": "获取项目列表",
                 "parameters": [
@@ -43,6 +125,7 @@
                     },
                     {
                         "type": "integer",
+                        "description": "项目id",
                         "name": "id",
                         "in": "query"
                     },
@@ -78,45 +161,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.GetProjectListResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/services.WebResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/login": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "鉴权"
-                ],
-                "summary": "登录",
-                "parameters": [
-                    {
-                        "description": "登录用户的账号密码",
-                        "name": "Login",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.LoginReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/services.Token"
                         }
                     },
                     "400": {
@@ -207,6 +251,7 @@
                     "type": "string"
                 },
                 "id": {
+                    "description": "项目id",
                     "type": "integer"
                 },
                 "name": {
